Removed patterns.py and updated configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = shieldcommit
-version = 0.1.5
-description = Lightweight pre-commit secret scanner CLI
+version = 1.0.0
+description = Lightweight pre-commit secret scanner CLI with EKS/RDS version warnings
 long_description = file: README_PYPI.md
 long_description_content_type = text/markdown
 author = TechiKrish
