--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,5 +15,5 @@ jobs:
       - run: |
           pip install -e .
           pip install pytest flake8
-      - run: flake8 shieldcommit
+      - run: flake8 src
       - run: pytest
