--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,38 @@
-name: CI
+name: ShieldCommit CI
 
 on:
   pull_request:
-    branches: [ main ]
+  push:
+    branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-      - run: |
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
           pip install -e .
-          pip install pytest flake8
-      - run: flake8 src
-      - run: pytest
+          pip install -r requirements.txt || true
+
+      - name: Verify CLI loads
+        run: |
+          shieldcommit --help
+
+      - name: Run tests (if available)
+        run: |
+          if [ -d tests ]; then
+            pip install pytest
+            pytest
+          else
+            echo "No tests directory, skipping tests"
+          fi
