--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,16 @@ python_requires = >=3.8
 install_requires =
     click>=8.0
 
+[options.extras_require]
+dev =
+    pytest>=7.0
+    pytest-cov>=3.0
+    flake8>=4.0
+    black>=22.0
+    isort>=5.0
+    bandit>=1.7
+    safety>=2.0
+
 [options.packages.find]
 where = src
 
